--- a/iCapture/.settings/org.eclipse.wst.common.component
+++ b/iCapture/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_web"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src_util"/>
         <property name="context-root" value="iCapture"/>
         <property name="java-output-path" value="/iCapture/build/classes"/>
     </wb-module>
