修改页面，添加查询表单，未实现查询功能

--- a/iCapture/WebContent/plug/jquery-easyui-1.4.1/themes/default/easyui.css
+++ b/iCapture/WebContent/plug/jquery-easyui-1.4.1/themes/default/easyui.css
@@ -1,3 +1,7 @@
+/*添加全局字体大小*/
+body{
+	font-size: 14px;
+}
 .panel {
   overflow: hidden;
   text-align: left;
@@ -123,10 +127,10 @@
 .panel-body {
   background-color: #ffffff;
   color: #000000;
-  font-size: 12px;
+  font-size: 14px;
 }
 .panel-title {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   color: #0E2D5F;
   height: 16px;
@@ -335,7 +339,7 @@
   vertical-align: top;
   width: auto;
   line-height: 24px;
-  font-size: 12px;
+  font-size: 14px;
   padding: 0;
   margin: 0 4px;
 }
@@ -519,7 +523,7 @@
   border-radius: 5px 5px 5px 5px;
 }
 .textbox .textbox-text {
-  font-size: 12px;
+  font-size: 14px;
   border: 0;
   margin: 0;
   padding: 4px;
@@ -532,7 +536,7 @@
   border-radius: 5px 5px 5px 5px;
 }
 .textbox .textbox-prompt {
-  font-size: 12px;
+  font-size: 14px;
   color: #aaa;
 }
 .textbox-button,
@@ -608,7 +612,7 @@
   vertical-align: middle;
 }
 .combo .combo-text {
-  font-size: 12px;
+  font-size: 14px;
   border: 0px;
   margin: 0;
   padding: 0px 2px;
@@ -659,7 +663,7 @@
 }
 .combobox-item,
 .combobox-group {
-  font-size: 12px;
+  font-size: 14px;
   padding: 3px;
   padding-right: 0px;
 }
@@ -879,14 +883,14 @@
   position: absolute;
   font-size: 1px;
   display: block;
-  height: 12px;
+  height: 14px;
   padding: 0;
   top: 50%;
   margin-top: -6px;
   overflow: hidden;
 }
 .tabs li a.tabs-close {
-  width: 12px;
+  width: 14px;
   right: 5px;
   opacity: 0.6;
   filter: alpha(opacity=60);
@@ -897,8 +901,8 @@
 .tabs-p-tool a {
   display: inline-block;
   font-size: 1px;
-  width: 12px;
-  height: 12px;
+  width: 14px;
+  height: 14px;
   margin: 0;
   opacity: 0.6;
   filter: alpha(opacity=60);
@@ -922,7 +926,7 @@
   margin-top: -8px;
 }
 .tabs-title {
-  font-size: 12px;
+  font-size: 14px;
 }
 .tabs-closable {
   padding-right: 8px;
@@ -1227,13 +1231,13 @@
   overflow: hidden;
   height: 18px;
   line-height: 18px;
-  font-size: 12px;
+  font-size: 14px;
 }
 .datagrid-header .datagrid-cell {
   height: auto;
 }
 .datagrid-header .datagrid-cell span {
-  font-size: 12px;
+  font-size: 14px;
 }
 .datagrid-cell-group {
   text-align: center;
@@ -1310,7 +1314,7 @@
   margin: 0;
   padding: 2px 4px;
   border: 1px solid #95B8E7;
-  font-size: 12px;
+  font-size: 14px;
   outline-style: none;
   -moz-border-radius: 0 0 0 0;
   -webkit-border-radius: 0 0 0 0;
@@ -1462,10 +1466,10 @@
   padding: 0;
   height: 30px;
   line-height: 30px;
-  font-size: 12px;
+  font-size: 14px;
 }
 .pagination span {
-  font-size: 12px;
+  font-size: 14px;
 }
 .pagination-link .l-btn-text {
   width: 24px;
@@ -1503,13 +1507,13 @@
 .calendar table {
   table-layout: fixed;
   border-collapse: separate;
-  font-size: 12px;
+  font-size: 14px;
   width: 100%;
   height: 100%;
 }
 .calendar table td,
 .calendar table th {
-  font-size: 12px;
+  font-size: 14px;
 }
 .calendar-noborder {
   border: 0;
@@ -1529,7 +1533,7 @@
   padding: 0 3px;
   height: 18px;
   line-height: 18px;
-  font-size: 12px;
+  font-size: 14px;
   cursor: pointer;
   -moz-border-radius: 5px 5px 5px 5px;
   -webkit-border-radius: 5px 5px 5px 5px;
@@ -1597,7 +1601,7 @@
   width: 180px;
   height: 150px;
   padding: 5px;
-  font-size: 12px;
+  font-size: 14px;
   display: none;
   overflow: hidden;
 }
@@ -1613,7 +1617,7 @@
   margin: 0;
   padding: 2px;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 14px;
 }
 .calendar-menu-prev,
 .calendar-menu-next {
@@ -1700,7 +1704,7 @@
   text-align: center;
 }
 .datebox-button a {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   text-decoration: none;
   opacity: 0.6;
@@ -1747,7 +1751,7 @@
   vertical-align: middle;
 }
 .spinner .spinner-text {
-  font-size: 12px;
+  font-size: 14px;
   border: 0px;
   margin: 0;
   padding: 0 2px;
@@ -1833,7 +1837,7 @@
 }
 .progressbar-text {
   color: #000000;
-  font-size: 12px;
+  font-size: 14px;
 }
 .progressbar-value .progressbar-text {
   background-color: #ffe48d;
@@ -1850,14 +1854,14 @@
   vertical-align: middle;
 }
 .searchbox .searchbox-text {
-  font-size: 12px;
+  font-size: 14px;
   border: 0;
   margin: 0;
   padding: 0 2px;
   vertical-align: top;
 }
 .searchbox .searchbox-prompt {
-  font-size: 12px;
+  font-size: 14px;
   color: #ccc;
 }
 .searchbox-button {
@@ -1960,8 +1964,8 @@
 .slider-tip {
   position: absolute;
   display: inline-block;
-  line-height: 12px;
-  font-size: 12px;
+  line-height: 14px;
+  font-size: 14px;
   white-space: nowrap;
   top: -22px;
 }
@@ -1984,7 +1988,7 @@
 .slider-rulelabel span {
   position: absolute;
   display: inline-block;
-  font-size: 12px;
+  font-size: 14px;
 }
 .slider-v .slider-inner {
   width: 6px;
@@ -2093,7 +2097,7 @@
 }
 .menu-text,
 .menu-text span {
-  font-size: 12px;
+  font-size: 14px;
 }
 .menu-shadow {
   position: absolute;
@@ -2377,7 +2381,7 @@
   background: url('images/tree_icons.png') no-repeat -240px -18px;
 }
 .tree-title {
-  font-size: 12px;
+  font-size: 14px;
   display: inline-block;
   text-decoration: none;
   vertical-align: top;
@@ -2387,7 +2391,7 @@
   line-height: 18px;
 }
 .tree-node-proxy {
-  font-size: 12px;
+  font-size: 14px;
   line-height: 20px;
   padding: 0 2px 0 20px;
   border-width: 1px;
@@ -2420,7 +2424,7 @@
 }
 .tree-editor {
   border: 1px solid #ccc;
-  font-size: 12px;
+  font-size: 14px;
   height: 14px !important;
   height: 18px;
   line-height: 14px;
@@ -2463,7 +2467,7 @@
   border-radius: 5px 5px 5px 5px;
 }
 .tooltip-content {
-  font-size: 12px;
+  font-size: 14px;
 }
 .tooltip-arrow-outer,
 .tooltip-arrow {
@@ -2486,7 +2490,7 @@
 .tooltip-right .tooltip-arrow {
   left: 0;
   top: 50%;
-  margin: -6px 0 0 -12px;
+  margin: -6px 0 0 -14px;
 }
 .tooltip-left .tooltip-arrow-outer {
   right: 0;
@@ -2496,7 +2500,7 @@
 .tooltip-left .tooltip-arrow {
   right: 0;
   top: 50%;
-  margin: -6px -12px 0 0;
+  margin: -6px -14px 0 0;
 }
 .tooltip-top .tooltip-arrow-outer {
   bottom: 0;
@@ -2506,7 +2510,7 @@
 .tooltip-top .tooltip-arrow {
   bottom: 0;
   left: 50%;
-  margin: 0 0 -12px -6px;
+  margin: 0 0 -14px -6px;
 }
 .tooltip-bottom .tooltip-arrow-outer {
   top: 0;
@@ -2516,7 +2520,7 @@
 .tooltip-bottom .tooltip-arrow {
   top: 0;
   left: 50%;
-  margin: -12px 0 0 -6px;
+  margin: -14px 0 0 -6px;
 }
 .tooltip {
   background-color: #ffffff;
